--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background: #27203d;
+  border-radius: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #1e1833;
+  border-radius: 8px;
+  border: 2px solid #27203d;
+}
+
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #1e1833 #27203d;
+}
